[gd_scene load_steps=5 format=3 uid="uid://dr3km4us7vnsv"]

[ext_resource type="Script" path="res://Player/Attack/javelin.gd" id="1_r7mfn"]
[ext_resource type="Texture2D" uid="uid://cj48evx8hx643" path="res://Textures/Items/Weapons/javelin_3_new.png" id="1_u65r4"]
[ext_resource type="AudioStream" uid="uid://bem3la07lh4cp" path="res://Audio/SoundEffect/woosh.wav" id="2_juf7y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gagl8"]
size = Vector2(4, 34)

[node name="Javelin" type="Area2D" groups=["attack"]]
top_level = true
collision_layer = 4
collision_mask = 0
script = ExtResource("1_r7mfn")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 0.785398
texture = ExtResource("1_u65r4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_gagl8")
disabled = true

[node name="AttackTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 4.0
one_shot = true
autostart = true

[node name="ChangeDirectionTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="ResetPositionTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0
autostart = true

[node name="AttackSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_juf7y")
autoplay = true

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="ChangeDirectionTimer" to="." method="_on_change_direction_timer_timeout"]
[connection signal="timeout" from="ResetPositionTimer" to="." method="_on_reset_position_timer_timeout"]
